feat: Add navbar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
       <div class="loader"></div>
     </div>
 
+    <!-- Navigation -->
+    <nav class="navbar">
+      <div class="nav-container">
+        <div class="nav-brand">
+          <h1>One Million Green Entities</h1>
+        </div>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#home" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#initiative" class="nav-link">The Initiative</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact us</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <!-- Main content -->
     <div class="main-content" id="mainContent">
       <div class="header"></div>
