feat: Add footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="nav-brand">
           <h1>One Million Green Entities</h1>
         </div>
-        <ul class="nav-menu">
+        <ul class="nav-menu" id="navMenu">
           <li class="nav-item">
             <a href="#home" class="nav-link">Home</a>
           </li>
@@ -29,6 +29,11 @@
             <a href="#contact" class="nav-link">Contact us</a>
           </li>
         </ul>
+        <div class="hamburger" id="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
     </nav>
 
@@ -50,6 +55,32 @@
         </p>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-left">
+          <a href="https://instagram.com" target="_blank" class="social-link">
+            <svg
+              class="instagram-icon"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+              <path
+                d="m16 11.37a4 4 0 1 1-7.74-1.37 4 4 0 0 1 7.74 1.37z"
+              ></path>
+              <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+            </svg>
+          </a>
+        </div>
+        <div class="footer-right">
+          <a href="#contact" class="contact-btn">Contact us</a>
+        </div>
+      </div>
+    </footer>
 
     <script src="config.js"></script>
     <script src="script.js"></script>
