--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#home" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#initiative" class="nav-link">The Initiative</a>
+            <a href="initiative.html" class="nav-link">The Initiative</a>
           </li>
           <li class="nav-item">
             <a href="#contact" class="nav-link">Contact us</a>
