feat: Add contact us page

--- a/initiative.html
+++ b/initiative.html
@@ -22,7 +22,7 @@
             <a href="initiative.html" class="nav-link active">The Initiative</a>
           </li>
           <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact us</a>
+            <a href="contact.html" class="nav-link">Contact us</a>
           </li>
         </ul>
         <div class="hamburger" id="hamburger">
@@ -52,7 +52,7 @@
               every green entity - from grassroots nonprofits to established
               eco-businesses - can stand together and be discovered.
             </p>
-            <button class="cta-button">Join</button>
+            <a href="contact.html" class="cta-button">Join</a>
           </div>
           <div class="image-content">
             <img
@@ -166,7 +166,7 @@
           </a>
         </div>
         <div class="footer-right">
-          <a href="#contact" class="contact-btn">Contact us</a>
+          <a href="contact.html" class="contact-btn">Contact us</a>
         </div>
       </div>
     </footer>
