--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="initiative.html" class="nav-link">The Initiative</a>
           </li>
           <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact us</a>
+            <a href="contact.html" class="nav-link">Contact us</a>
           </li>
         </ul>
         <div class="hamburger" id="hamburger">
@@ -77,7 +77,7 @@
           </a>
         </div>
         <div class="footer-right">
-          <a href="#contact" class="contact-btn">Contact us</a>
+          <a href="contact.html" class="contact-btn">Contact us</a>
         </div>
       </div>
     </footer>
