feat: add animation

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <div class="main-content contact-content">
       <div class="contact-container">
         <!-- Left Side - Contact Information -->
-        <div class="contact-info">
+        <div class="contact-info animate-on-scroll delay-1">
           <section class="get-in-touch">
             <h2>Get in Touch</h2>
             <p>
@@ -120,7 +120,7 @@
         </div>
 
         <!-- Right Side - Contact Form -->
-        <div class="contact-form-section">
+        <div class="contact-form-section animate-on-scroll delay-2">
           <h2>Send us a Message</h2>
           <form class="contact-form" id="contactForm">
             <div class="form-group">
