--- a/initiative.html
+++ b/initiative.html
@@ -36,7 +36,7 @@
     <!-- Main content -->
     <div class="main-content initiative-content">
       <!-- Our Story Section -->
-      <section class="content-section">
+      <section class="content-section animate-on-scroll">
         <div class="section-container">
           <div class="text-content">
             <h2>Our Story</h2>
@@ -64,7 +64,7 @@
       </section>
 
       <!-- Our Mission Section -->
-      <section class="content-section mission-section">
+      <section class="content-section mission-section animate-on-scroll">
         <div class="section-container single-column">
           <div class="text-content full-width">
             <h2>Our Mission</h2>
@@ -82,7 +82,7 @@
       </section>
 
       <!-- What Makes an Entity Green Section -->
-      <section class="content-section reverse">
+      <section class="content-section reverse animate-on-scroll">
         <div class="section-container">
           <div class="image-content">
             <img
@@ -103,7 +103,7 @@
       </section>
 
       <!-- FAQ Section -->
-      <section class="content-section">
+      <section class="content-section animate-on-scroll">
         <div class="section-container">
           <div class="image-content">
             <img src="images/initiative_3.jpg" alt="Green exhibition space" />
