feat: edit style

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,9 @@
     <nav class="navbar">
       <div class="nav-container">
         <div class="nav-brand">
-          <h1>One Million Green Entities</h1>
+          <a href="index.html" class="nav-brand-link">
+            <h1>One Million Green Entities</h1>
+          </a>
         </div>
         <ul class="nav-menu" id="navMenu">
           <li class="nav-item">
