--- a/initiative.html
+++ b/initiative.html
@@ -37,30 +37,75 @@
 
     <!-- Main content -->
     <div class="main-content initiative-content">
-      <!-- Our Story Section -->
+      <!-- What the Initiative Is About Section -->
       <section class="content-section animate-on-scroll">
         <div class="section-container">
           <div class="text-content">
-            <h2>Our Story</h2>
+            <h2>What the Initiative Is About</h2>
             <p>
-              One Million Green Entities was born from a simple observation:
-              amazing green organizations were scattered across the digital
-              world, their incredible work often invisible to those who needed
-              to find them.
+              One Million Green Entities is a unique digital platform that
+              brings together environmentally and socially conscious
+              organizations, companies and individuals from around the world.
+              Our concept is simple yet powerful: we offer a grid of one million
+              pixels, divided into cells of 10,000 blocks, each block containing
+              100 pixels, available for purchase at just €2 per cell.
             </p>
             <p>
-              We created this platform to solve that problem. Inspired by the
-              concept of collective visibility, we're building a space where
-              every green entity - from grassroots nonprofits to established
-              eco-businesses - can stand together and be discovered.
+              When green entities purchase a cell, their logo and link become
+              part of our global showcase, creating a visual directory of
+              entities making a positive impact. Each cell serves as a digital
+              window to these entities, allowing visitors to discover and
+              connect with businesses, NGOs, and initiatives that share a
+              commitment to environmental sustainability and social
+              responsibility.
             </p>
-            <a href="contact.html" class="cta-button">Join</a>
+            <p>
+              This isn't just advertising – it's community building. Every
+              purchase contributes to funding meaningful social projects, making
+              each participant part of a larger movement for positive change.
+            </p>
+            <a href="contact.html" class="cta-button">Join Our Initiative</a>
           </div>
           <div class="image-content">
             <img
               src="images/initiative_1.jpg"
-              alt="Recycling center with welcome message"
+              alt="Global network of green entities"
             />
+          </div>
+        </div>
+      </section>
+
+      <!-- The Story of the Initiative Section -->
+      <section class="content-section reverse animate-on-scroll">
+        <div class="section-container">
+          <div class="image-content">
+            <img
+              src="images/initiative_2.jpg"
+              alt="The beginning of our journey"
+            />
+          </div>
+          <div class="text-content">
+            <h2>The Story of the Initiative</h2>
+            <p>
+              The idea for One Million Green Entities was born from a simple
+              observation: there was no centralized platform collecting and
+              showcasing all the amazing green entities making a difference in
+              our world. As the founder, I noticed this gap and decided to act.
+            </p>
+            <p>
+              Starting with zero funding and driven purely by passion for
+              environmental and social causes, I began developing this
+              initiative. The concept was inspired by the need to create an
+              affordable, accessible way for green entities to gain visibility
+              while simultaneously funding social projects that matter.
+            </p>
+            <p>
+              What started as a one-person mission has evolved into a platform
+              designed to connect like-minded organizations and channel their
+              collective power toward meaningful social impact. Every entity
+              that joins our grid becomes part of a story much larger than
+              themselves, a story of global cooperation for a better world.
+            </p>
           </div>
         </div>
       </section>
@@ -71,77 +116,249 @@
           <div class="text-content full-width">
             <h2>Our Mission</h2>
             <p>
-              To create the world's most comprehensive, accessible platform for
-              green entities while funding meaningful social projects that
-              support immigrant communities.
+              To create the world's most comprehensive digital showcase of green
+              entities while generating sustainable funding for social impact
+              projects. We exist to:
             </p>
-            <p>
-              And connecting sustainable brands through engaging pixel space
-              opportunities.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- What Makes an Entity Green Section -->
-      <section class="content-section reverse animate-on-scroll">
-        <div class="section-container">
-          <div class="image-content">
-            <img
-              src="images/initiative_2.jpg"
-              alt="Community project display"
-            />
-          </div>
-          <div class="text-content">
-            <h2>What Makes an Entity "Green"</h2>
-            <p>We define green entities as organizations that:</p>
             <ul>
-              <li>Have positive environmental or social impact</li>
-              <li>Are not involved in any conflicts or wars</li>
-              <li>Demonstrate genuine commitment to making the world better</li>
+              <li>
+                Connect environmentally and socially conscious entities in one
+                accessible platform
+              </li>
+              <li>
+                Support the visibility and growth of entities making positive
+                change
+              </li>
+              <li>
+                Fund meaningful social projects through our affordable cell
+                sales model
+              </li>
+              <li>
+                Build a global community united by shared values of
+                sustainability and social responsibility
+              </li>
+              <li>
+                Democratize access to digital presence for entities of all sizes
+              </li>
             </ul>
           </div>
         </div>
       </section>
 
-      <!-- FAQ Section -->
+      <!-- Our Vision Section -->
       <section class="content-section animate-on-scroll">
         <div class="section-container">
+          <div class="text-content">
+            <h2>Our Vision</h2>
+            <p>
+              We envision a world where every green entity, regardless of size
+              or budget, has a voice and visibility in the global conversation
+              about sustainability and social impact.
+            </p>
+            <p>
+              Our long-term vision is to collect as many entities as we can on
+              this website to become the go-to destination for anyone seeking to
+              discover, connect with, or support environmentally and socially
+              responsible organizations worldwide. We see One Million Green
+              Entities as more than a website – it's a movement that
+              demonstrates how collective small actions can create substantial
+              positive change.
+            </p>
+            <p>
+              By the time our grid is complete, we aim to have created a
+              self-sustaining ecosystem where green entities thrive, social
+              projects flourish, and positive impact multiplies across
+              communities globally.
+            </p>
+          </div>
           <div class="image-content">
-            <img src="images/initiative_3.jpg" alt="Green exhibition space" />
+            <img
+              src="images/initiative_3.jpg"
+              alt="Vision of global sustainability"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- How We Select Entities Section -->
+      <section class="content-section reverse animate-on-scroll">
+        <div class="section-container">
+          <div class="image-content">
+            <img src="images/data_0.jpg" alt="Entity verification process" />
           </div>
           <div class="text-content">
-            <h2>FAQ Section</h2>
-            <div class="faq-item">
-              <h3>What exactly am I buying for 2€?</h3>
-              <p>
-                You're purchasing a 1000-pixel cell on our interactive grid.
-                When visitors click your cell, they'll be directed to your
-                website or social media page.
-              </p>
+            <h2>How We Select Entities</h2>
+            <p>
+              Our selection process ensures that every entity on our platform
+              truly embodies green and socially responsible values and is not
+              involved in any wars:
+            </p>
+
+            <h3>Core Criteria:</h3>
+            <ul>
+              <li>
+                <strong>Peace Commitment:</strong> Entities must not be involved
+                in any war or conflict-related activities
+              </li>
+              <li>
+                <strong>Positive Social Impact:</strong> Organizations must
+                demonstrate clear positive impact on society or the environment
+              </li>
+              <li>
+                <strong>Mission Alignment:</strong> The entity's stated mission
+                and vision must align with sustainability and social
+                responsibility principles
+              </li>
+            </ul>
+
+            <h3>Verification Process:</h3>
+            <p>
+              We thoroughly investigate each entity's mission, vision, and
+              actual practices to confirm their environmental focus and social
+              impact credentials. This includes reviewing their public
+              communications, partnerships, and documented activities to ensure
+              authenticity and alignment with our values.
+            </p>
+
+            <h3>Quality Standards:</h3>
+            <p>
+              We maintain high standards to preserve the integrity of our
+              platform and ensure that every entity represents genuine
+              commitment to positive change.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- How to Be Part of Our Initiative Section -->
+      <section class="content-section animate-on-scroll">
+        <div class="section-container single-column">
+          <div class="text-content full-width">
+            <h2>How to Be Part of Our Initiative</h2>
+            <p>
+              Joining One Million Green Entities is a simple and straightforward
+              process designed to ensure quality while making participation
+              accessible:
+            </p>
+
+            <div class="steps-container">
+              <div class="step-item">
+                <h3>Step 1: Contact Us</h3>
+                <p>
+                  Reach out to us through our website to express your interest
+                  in joining our platform. Let us know about your organization
+                  and your commitment to green and social impact initiatives.
+                </p>
+              </div>
+
+              <div class="step-item">
+                <h3>Step 2: Choose Your Cells</h3>
+                <p>
+                  Select the number of cells you want to purchase on our grid.
+                  Each cell costs just €2 and consists of 10,000 blocks, with
+                  each block containing 100 pixels where your logo and link will
+                  be displayed. You can choose one cell or multiple cells based
+                  on your needs and budget.
+                </p>
+              </div>
+
+              <div class="step-item">
+                <h3>Step 3: Entity Verification</h3>
+                <p>
+                  We conduct a thorough review of your organization to ensure it
+                  meets our green entity criteria. This includes examining your
+                  mission, vision, and actual practices to confirm your
+                  commitment to positive environmental and social impact.
+                </p>
+              </div>
+
+              <div class="step-item">
+                <h3>Step 4: Payment Details</h3>
+                <p>
+                  Once your entity passes our verification process, we'll
+                  contact you via email with all the payment details and
+                  instructions. We'll provide you with secure payment options
+                  and clear next steps.
+                </p>
+              </div>
+
+              <div class="step-item">
+                <h3>Step 5: Reservation & Placement</h3>
+                <p>
+                  After payment is completed, we reserve your chosen cells on
+                  the grid and upload your logo and website link. Your
+                  organization becomes part of our global showcase of green
+                  entities, visible to visitors worldwide.
+                </p>
+              </div>
+
+              <div class="step-item">
+                <h3>Step 6: Go Live</h3>
+                <p>
+                  Your entity is now live on our platform, contributing to both
+                  the global green community and funding our social impact
+                  projects. Welcome to the movement!
+                </p>
+              </div>
             </div>
-            <div class="faq-item">
-              <h3>How do you verify green entities?</h3>
-              <p>
-                We research each organization's mission, vision, and activities
-                to ensure they align with our environmental and social impact
-                criteria.
-              </p>
+
+            <div class="cta-section">
+              <a href="contact.html" class="cta-button">Start Your Journey</a>
             </div>
-            <div class="faq-item">
-              <h3>What social projects do you support?</h3>
-              <p>
-                Proceeds fund catering and kitchen projects that support
-                immigrant communities, helping them integrate and thrive.
-              </p>
-            </div>
-            <div class="faq-item">
-              <h3>Can I change my linked website later?</h3>
-              <p>
-                Yes, you can update your linked destination through your account
-                dashboard.
-              </p>
-            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Our First Project Section -->
+      <section class="content-section reverse animate-on-scroll">
+        <div class="section-container">
+          <div class="image-content">
+            <img
+              src="images/data_1.jpg"
+              alt="Supporting immigrant communities"
+            />
+          </div>
+          <div class="text-content">
+            <h2>Our First Project: Supporting Immigrant Communities</h2>
+            <p>
+              Our inaugural social project focuses on creating a catering and
+              kitchen initiative specifically designed to support immigrant
+              communities. This project will be funded directly through the
+              proceeds from our cell sales.
+            </p>
+
+            <h3>Project Goals:</h3>
+            <ul>
+              <li>
+                Provide culinary training and employment opportunities for
+                immigrants
+              </li>
+              <li>
+                Create a sustainable food service that serves the broader
+                community
+              </li>
+              <li>
+                Build bridges between immigrant communities and local residents
+                through food and culture
+              </li>
+              <li>
+                Establish a model for future social projects that can be
+                replicated in other locations
+              </li>
+            </ul>
+
+            <p>
+              <strong>Timeline:</strong> This project will launch once we reach
+              our cell sales target, ensuring we have sufficient funding to make
+              a meaningful impact.
+            </p>
+
+            <p>
+              <strong>Impact:</strong> Beyond providing immediate support to
+              immigrant communities, this project demonstrates how digital
+              innovation can drive real-world social change, creating a template
+              for future initiatives funded through our platform.
+            </p>
           </div>
         </div>
       </section>
