feat: edit style

--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,294 @@
               <li>Share feedback and suggestions</li>
             </ul>
           </section>
+
+          <!-- FAQ Accordion Section -->
+          <section class="faq-section">
+            <h2>Frequently Asked Questions (FAQ)</h2>
+            <div class="accordion">
+              <div class="accordion-item">
+                <div class="accordion-header">
+                  <h3>What exactly is One Million Green Entities?</h3>
+                  <div class="accordion-icon">
+                    <svg
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <path d="M6 9l6 6 6-6" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="accordion-content">
+                  <div class="accordion-content-inner">
+                    <p>
+                      One Million Green Entities is a digital platform that
+                      showcases environmentally and socially conscious
+                      organizations, companies, and individuals worldwide. We
+                      offer a grid of one million pixels divided into 10,000
+                      blocks (each block containing 100 pixels) for just €2 per
+                      block. When you purchase a block, your logo and link
+                      become part of our global directory of green entities,
+                      creating visibility for your organization while funding
+                      meaningful social projects.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <div class="accordion-header">
+                  <h3>Who can join the platform?</h3>
+                  <div class="accordion-icon">
+                    <svg
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <path d="M6 9l6 6 6-6" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="accordion-content">
+                  <div class="accordion-content-inner">
+                    <p>
+                      Any organization, company, or individual that meets our
+                      green entity criteria can join. We welcome:
+                    </p>
+                    <ul>
+                      <li>Environmental organizations and NGOs</li>
+                      <li>Sustainable businesses and social enterprises</li>
+                      <li>
+                        Companies with strong environmental and social
+                        responsibility practices
+                      </li>
+                      <li>Individuals promoting green initiatives</li>
+                    </ul>
+                    <p>
+                      However, entities must not be involved in any war or
+                      conflict-related activities and must demonstrate clear
+                      positive impact on society or the environment.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <div class="accordion-header">
+                  <h3>How much does it cost and what do I get?</h3>
+                  <div class="accordion-icon">
+                    <svg
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <path d="M6 9l6 6 6-6" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="accordion-content">
+                  <div class="accordion-content-inner">
+                    <p>Each block costs just €2 and includes:</p>
+                    <ul>
+                      <li>
+                        A space of 10,000 blocks (each block containing 100
+                        pixels) on our global grid
+                      </li>
+                      <li>Your logo displayed prominently</li>
+                      <li>A clickable link to your website or social media</li>
+                      <li>
+                        Permanent placement in our directory of green entities
+                      </li>
+                      <li>Contribution to funding social impact projects</li>
+                      <li>
+                        Being part of a global community of environmentally
+                        conscious organizations
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <div class="accordion-header">
+                  <h3>How do you verify that entities are truly "green"?</h3>
+                  <div class="accordion-icon">
+                    <svg
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <path d="M6 9l6 6 6-6" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="accordion-content">
+                  <div class="accordion-content-inner">
+                    <p>
+                      We have a thorough verification process that includes:
+                    </p>
+                    <ul>
+                      <li>
+                        Reviewing your organization's mission and vision
+                        statements
+                      </li>
+                      <li>
+                        Examining your actual practices and documented
+                        activities
+                      </li>
+                      <li>
+                        Checking your public communications and partnerships
+                      </li>
+                      <li>
+                        Ensuring you meet our core criteria: peace commitment,
+                        positive social impact, and mission alignment with
+                        sustainability
+                      </li>
+                      <li>
+                        Maintaining quality standards to preserve platform
+                        integrity
+                      </li>
+                    </ul>
+                    <p>
+                      This process ensures every entity on our platform
+                      represents genuine commitment to positive change.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <div class="accordion-header">
+                  <h3>
+                    What social projects do you support with the proceeds?
+                  </h3>
+                  <div class="accordion-icon">
+                    <svg
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <path d="M6 9l6 6 6-6" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="accordion-content">
+                  <div class="accordion-content-inner">
+                    <p>
+                      Our first social project focuses on supporting immigrant
+                      communities through a catering and kitchen initiative.
+                      This project will:
+                    </p>
+                    <ul>
+                      <li>
+                        Provide culinary training and employment opportunities
+                        for immigrants
+                      </li>
+                      <li>
+                        Create sustainable food services for the broader
+                        community
+                      </li>
+                      <li>
+                        Build bridges between immigrant and local communities
+                        through food and culture
+                      </li>
+                      <li>Serve as a model for future social projects</li>
+                    </ul>
+                    <p>
+                      The project launches once we reach our sales target,
+                      ensuring sufficient funding for meaningful impact.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <div class="accordion-header">
+                  <h3>How long does the joining process take?</h3>
+                  <div class="accordion-icon">
+                    <svg
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <path d="M6 9l6 6 6-6" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="accordion-content">
+                  <div class="accordion-content-inner">
+                    <p>The process typically takes 5-10 business days:</p>
+                    <ul>
+                      <li><strong>Step 1:</strong> Contact us</li>
+                      <li>
+                        <strong>Step 2:</strong> Choose your blocks by giving us
+                        the blocks no.
+                      </li>
+                      <li>
+                        <strong>Step 3:</strong> Entity verification (2-5
+                        business days)
+                      </li>
+                      <li>
+                        <strong>Step 4:</strong> Payment details sent via email
+                      </li>
+                      <li>
+                        <strong>Step 5:</strong> Payment processing and block
+                        reservation
+                      </li>
+                      <li>
+                        <strong>Step 6:</strong> Go live on the platform
+                        (immediate after payment)
+                      </li>
+                    </ul>
+                    <p>
+                      We'll keep you informed throughout the entire process via
+                      email.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <div class="accordion-header">
+                  <h3>Is my placement on the grid permanent?</h3>
+                  <div class="accordion-icon">
+                    <svg
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <path d="M6 9l6 6 6-6" />
+                    </svg>
+                  </div>
+                </div>
+                <div class="accordion-content">
+                  <div class="accordion-content-inner">
+                    <p>
+                      Yes! Once you purchase a cell and complete the process,
+                      your placement on our grid is permanent. Your logo and
+                      link will remain visible to visitors as long as the One
+                      Million Green Entities platform exists. This makes your €2
+                      investment a one-time cost for ongoing visibility and
+                      participation in our green community.
+                    </p>
+                    <p>
+                      Additionally, as our platform grows and gains more
+                      visitors, the value of your placement increases, giving
+                      you long-term benefits from your participation in our
+                      initiative.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
 
         <!-- Right Side - Contact Form -->
