--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 
           <!-- FAQ Accordion Section -->
           <section class="faq-section">
-            <h2>Frequently Asked Questions (FAQ)</h2>
+            <h2>FAQ</h2>
             <div class="accordion">
               <div class="accordion-item">
                 <div class="accordion-header">
