--- a/initiative.html
+++ b/initiative.html
@@ -520,23 +520,6 @@
                 </svg>
               </a>
             </div>
-            <div class="contact-info">
-              <a href="contact.html" class="footer-contact-btn">
-                <svg
-                  class="contact-icon"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                >
-                  <path
-                    d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
-                  />
-                  <polyline points="22,6 12,13 2,6" />
-                </svg>
-                Get In Touch
-              </a>
-            </div>
           </div>
         </div>
 
@@ -544,7 +527,7 @@
         <div class="footer-bottom">
           <div class="footer-stats">
             <div class="stat-item">
-              <span class="stat-number">0</span>
+              <span class="stat-number" id="entitiesCount">0</span>
               <span class="stat-label">Green Entities</span>
             </div>
             <div class="stat-item">
@@ -566,6 +549,7 @@
       </div>
     </footer>
 
+    <script src="config.js"></script>
     <script src="initiative.js"></script>
   </body>
 </html>
