--- a/contact.html
+++ b/contact.html
@@ -662,6 +662,11 @@
       </div>
     </footer>
 
+    <!-- EmailJS CDN -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
     <script src="config.js"></script>
     <script src="contact.js"></script>
   </body>
