--- a/initiative.html
+++ b/initiative.html
@@ -184,41 +184,6 @@
       <section class="content-section mission-section animate-on-scroll">
         <div class="section-container single-column">
           <div class="text-content full-width">
-            <h2>Our Mission</h2>
-            <p>
-              To create the world's most comprehensive digital showcase of green
-              entities while generating sustainable funding for social impact
-              projects. We exist to:
-            </p>
-            <ul>
-              <li>
-                Connect environmentally and socially conscious entities in one
-                accessible platform
-              </li>
-              <li>
-                Support the visibility and growth of entities making positive
-                change
-              </li>
-              <li>
-                Fund meaningful social projects through our affordable cell
-                sales model
-              </li>
-              <li>
-                Build a global community united by shared values of
-                sustainability and social responsibility
-              </li>
-              <li>
-                Democratize access to digital presence for entities of all sizes
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <!-- Our Vision Section -->
-      <section class="content-section animate-on-scroll">
-        <div class="section-container">
-          <div class="text-content">
             <h2>Our Vision</h2>
             <p>
               We envision a world where every green entity, regardless of size
@@ -240,6 +205,42 @@
               projects flourish, and positive impact multiplies across
               communities globally.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Our Vision Section -->
+      <section class="content-section animate-on-scroll">
+        <div class="section-container">
+          <div class="text-content">
+            <h2>Our Mission</h2>
+            <p>
+              To create the world's most comprehensive digital showcase of green
+              entities while generating sustainable funding for social impact
+              projects. We exist to:
+            </p>
+            <ul>
+              <li>
+                <b>Connect</b> environmentally and socially conscious entities
+                in one accessible platform
+              </li>
+              <li>
+                <b>Support</b> the visibility and growth of entities making
+                positive change
+              </li>
+              <li>
+                <b>Fund</b> meaningful social projects through our affordable
+                cell sales model
+              </li>
+              <li>
+                <b>Build</b> a global community united by shared values of
+                sustainability and social responsibility
+              </li>
+              <li>
+                <b>Democratize</b> access to digital presence for entities of
+                all sizes
+              </li>
+            </ul>
           </div>
           <div class="image-content">
             <img
@@ -316,8 +317,7 @@
                 <h3>Step 1: Contact Us</h3>
                 <p>
                   Reach out to us through our website to express your interest
-                  in joining our platform. Let us know about your organization
-                  and your commitment to green and social impact initiatives.
+                  in joining our platform. Let us know about your organization.
                 </p>
               </div>
 
@@ -389,45 +389,63 @@
             />
           </div>
           <div class="text-content">
-            <h2>Our First Project: Supporting Immigrant Communities</h2>
+            <h2>
+              Our First Project: Empowering Immigrant Communities Through Food
+            </h2>
             <p>
-              Our inaugural social project focuses on creating a catering and
-              kitchen initiative specifically designed to support immigrant
-              communities. This project will be funded directly through the
-              proceeds from our cell sales.
+              Our inaugural social project launches a community catering and
+              kitchen initiative that transforms lives while serving delicious,
+              sustainable food. Every cell sold on our platform brings us closer
+              to opening doors for immigrant communities.
             </p>
 
-            <h3>Project Goals:</h3>
+            <h3>What We're Building</h3>
             <ul>
               <li>
-                Provide culinary training and employment opportunities for
-                immigrants
+                🍽️ Culinary Training Hub - Professional kitchen skills and
+                certifications for immigrants seeking new opportunities
               </li>
               <li>
-                Create a sustainable food service that serves the broader
-                community
+                🌱 Green Food Service - Sustainable, locally-sourced catering
+                that aligns with our environmental values
               </li>
               <li>
-                Build bridges between immigrant communities and local residents
-                through food and culture
+                🤝 Cultural Bridge - Bringing communities together through
+                authentic flavors and shared experiences
               </li>
               <li>
-                Establish a model for future social projects that can be
-                replicated in other locations
+                📈 Scalable Impact Model - A proven framework for launching
+                similar projects worldwide
               </li>
             </ul>
 
+            <h4>The Journey Ahead</h4>
+
             <p>
-              <strong>Timeline:</strong> This project will launch once we reach
-              our cell sales target, ensuring we have sufficient funding to make
-              a meaningful impact.
+              <strong>Launch Trigger:</strong> This project activates once we
+              hit our cell sales milestone - ensuring every euro raised creates
+              maximum impact.
             </p>
 
             <p>
-              <strong>Impact:</strong> Beyond providing immediate support to
-              immigrant communities, this project demonstrates how digital
-              innovation can drive real-world social change, creating a template
-              for future initiatives funded through our platform.
+              <strong>Beyond Day One:</strong> This isn't just about one
+              kitchen. It's about proving that digital platforms can fuel
+              real-world change, creating a blueprint for communities
+              everywhere.
+            </p>
+
+            <h3>Why This Matters</h3>
+            <p>
+              Every immigrant brings recipes, traditions, and dreams. Our
+              project gives them the tools, training, and platform to share
+              their gifts while building sustainable livelihoods. It's not
+              charity - it's opportunity.
+            </p>
+            <p>
+              <strong>
+                Ready to be part of the change? Secure your cell and help us
+                cook up something extraordinary.</strong
+              >
             </p>
           </div>
         </div>
@@ -531,7 +549,7 @@
               <span class="stat-label">Green Entities</span>
             </div>
             <div class="stat-item">
-              <span class="stat-number">€2</span>
+              <span class="stat-number">€25</span>
               <span class="stat-label">Per Cell</span>
             </div>
             <div class="stat-item">
