--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Join One Million Green Entities - Connect with environmentally conscious organizations worldwide. Purchase 1000-pixel cells for €25 to showcase your green business and support immigrant social projects."
+    />
+    <meta
+      name="keywords"
+      content="One Million Green Entities, green entities, sustainable, social projects, immigrants, digital platform, sustainability, social responsibility"
+    />
     <title>Contact Us - One Million Green Entities</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="contact.css" />
@@ -145,11 +153,11 @@
                       showcases environmentally and socially conscious
                       organizations, companies, and individuals worldwide. We
                       offer a grid of one million pixels divided into 10,000
-                      blocks (each block containing 100 pixels) for just €2 per
-                      block. When you purchase a block, your logo and link
-                      become part of our global directory of green entities,
-                      creating visibility for your organization while funding
-                      meaningful social projects.
+                      cells (each cell containing 100 pixels) for just €25 per
+                      cell. When you purchase a cell, your logo and link become
+                      part of our global directory of green entities, creating
+                      visibility for your organization while funding meaningful
+                      social projects.
                     </p>
                   </div>
                 </div>
@@ -209,10 +217,10 @@
                 </div>
                 <div class="accordion-content">
                   <div class="accordion-content-inner">
-                    <p>Each block costs just €2 and includes:</p>
+                    <p>Each cell costs just €25 and includes:</p>
                     <ul>
                       <li>
-                        A space of 10,000 blocks (each block containing 100
+                        A space of 10,000 cells (each cell containing 100
                         pixels) on our global grid
                       </li>
                       <li>Your logo displayed prominently</li>
@@ -345,8 +353,8 @@
                     <ul>
                       <li><strong>Step 1:</strong> Contact us</li>
                       <li>
-                        <strong>Step 2:</strong> Choose your blocks by giving us
-                        the blocks no.
+                        <strong>Step 2:</strong> Choose your cells by giving us
+                        the cells no.
                       </li>
                       <li>
                         <strong>Step 3:</strong> Entity verification (2-5
@@ -356,7 +364,7 @@
                         <strong>Step 4:</strong> Payment details sent via email
                       </li>
                       <li>
-                        <strong>Step 5:</strong> Payment processing and block
+                        <strong>Step 5:</strong> Payment processing and cell
                         reservation
                       </li>
                       <li>
@@ -392,8 +400,8 @@
                       Yes! Once you purchase a cell and complete the process,
                       your placement on our grid is permanent. Your logo and
                       link will remain visible to visitors as long as the One
-                      Million Green Entities platform exists. This makes your €2
-                      investment a one-time cost for ongoing visibility and
+                      Million Green Entities platform exists. This makes your
+                      €25 investment a one-time cost for ongoing visibility and
                       participation in our green community.
                     </p>
                     <p>
@@ -649,7 +657,7 @@
             </div>
             <div class="stat-item">
               <span class="stat-number">10,000</span>
-              <span class="stat-label">Pixels Per Cell</span>
+              <span class="stat-label">Cells</span>
             </div>
           </div>
           <div class="footer-legal">
