--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Join One Million Green Entities - Connect with environmentally conscious organizations worldwide. Purchase 1000-pixel cells for €25 to showcase your green business and support immigrant social projects."
+    />
+    <meta
+      name="keywords"
+      content="One Million Green Entities, green entities, sustainable, social projects, immigrants, digital platform, sustainability, social responsibility"
+    />
     <title>One Million Green Entities</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -142,7 +150,7 @@
       <!-- Block Info Above Grid -->
       <div class="block-info-top" id="blockInfoTop">
         <span class="block-info-text">
-          <strong>Block #:</strong> <span id="blockNumberTop">-</span> |
+          <strong>Cell #:</strong> <span id="blockNumberTop">-</span> |
           <strong>Status:</strong>
           <span id="blockStatusTop" class="status">-</span>
         </span>
@@ -255,7 +263,7 @@
             </div>
             <div class="stat-item">
               <span class="stat-number">10,000</span>
-              <span class="stat-label">Pixels Per Cell</span>
+              <span class="stat-label">Cells</span>
             </div>
           </div>
           <div class="footer-legal">
