--- a/initiative.html
+++ b/initiative.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Join One Million Green Entities - Connect with environmentally conscious organizations worldwide. Purchase 1000-pixel cells for €25 to showcase your green business and support immigrant social projects."
+    />
+    <meta
+      name="keywords"
+      content="One Million Green Entities, green entities, sustainable, social projects, immigrants, digital platform, sustainability, social responsibility"
+    />
     <title>The Initiative - One Million Green Entities</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="initiative.css" />
@@ -113,12 +121,13 @@
           <div class="text-content">
             <h2>What the Initiative Is About</h2>
             <p>
-              One Million Green Entities is a unique digital platform that
-              brings together environmentally and socially conscious
-              organizations, companies and individuals from around the world.
-              Our concept is simple yet powerful: we offer a grid of one million
-              pixels, divided into cells of 10,000 blocks, each block containing
-              100 pixels, available for purchase at just €2 per cell.
+              One Million Green Entities is a Global Network of Sustainable,
+              Green Organizations and Entities Supporting Social Impact. We are
+              digital platform that brings together environmentally and socially
+              conscious organizations, companies and individuals from around the
+              world. Our concept is simple yet powerful: we offer a grid of one
+              million pixels, divided into 10,000 cells, each cell containing
+              100 pixels, available for purchase at just €25 per cell.
             </p>
             <p>
               When green entities purchase a cell, their logo and link become
@@ -133,6 +142,12 @@
               This isn't just advertising – it's community building. Every
               purchase contributes to funding meaningful social projects, making
               each participant part of a larger movement for positive change.
+            </p>
+            <p>
+              Join One Million Green Entities initiative and connect with
+              environmentally conscious organizations worldwide. Purchase pixels
+              to showcase your green business and support social projects for
+              immigrants.
             </p>
             <a href="contact.html" class="cta-button">Join Our Initiative</a>
           </div>
@@ -325,8 +340,8 @@
                 <h3>Step 2: Choose Your Cells</h3>
                 <p>
                   Select the number of cells you want to purchase on our grid.
-                  Each cell costs just €2 and consists of 10,000 blocks, with
-                  each block containing 100 pixels where your logo and link will
+                  Each cell costs just €25 and consists of 10,000 cells, with
+                  each cell containing 100 pixels where your logo and link will
                   be displayed. You can choose one cell or multiple cells based
                   on your needs and budget.
                 </p>
@@ -554,7 +569,7 @@
             </div>
             <div class="stat-item">
               <span class="stat-number">10,000</span>
-              <span class="stat-label">Pixels Per Cell</span>
+              <span class="stat-label">Cells</span>
             </div>
           </div>
           <div class="footer-legal">
